# molecular-diffusion

./: .gitignore  README.md  approach.md  jp5c01881_si_002.xlsx  pyproject.toml  requirements.txt
configs/: default.yaml
data/processed/: data_report.json
demo_api/: __init__.py  main.py
report/: _generated_tables.tex  full_report.tex  main.tex
scripts/: build_full_report.sh  build_report_figures.py  generate_report_latex_data.py  prepare_data.py  run_demo.sh  run_eval.py  run_train.py
src/diffusion_mol/: __init__.py  baselines.py  clean.py  datasets.py  evaluate.py  featurize.py  io_excel.py  plot.py  predict.py  scaling.py  splits.py  train.py
src/diffusion_mol/models/: __init__.py  gnn.py  mlp.py
tests/: test_eval_plots.py  test_integration_train.py  test_scaling.py  test_smoke.py  test_splits.py
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  api.ts  index.css
